# Smart-Shopper-Agent

./: README.md  ecommerce_data.db  main.py  pyproject.toml  requirements.txt
src/: ecommerce_cache.db
src/agent/: graph.py  state.py  tools.py
src/database/: db_manager.py  models.py
src/schemas/: product.py
src/scrapers/: amazon_scraper.py  amazon_spec_scraper.py  base_scraper.py  btech_scraper.py  btech_spec_scraper.py  noon_scraper.py  noon_spec_scraper.py
src/ui/: app.py
tests/: test_agent_chat.py  test_amazon.py  test_amazon_full_flow.py  test_btech.py  test_btech_full_flow.py  test_btech_spec.py  test_noon.py  test_noon_full_flow.py  test_noon_spec.py  test_spec_scraper.py  visualize_graph.py
